Clean up devDependencies in package.json
Removed @types/react-router-dom from devDependencies.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/react-router-dom": "^6.4.3"
-  }
+  "devDependencies": {}
 }
